# ucvm

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  PERFORMANCE.md  README.md  arguments.h  gdbstub.c  gdbstub.h  guest_inspector.h  guest_inspetor.c  load_kvm.c  load_kvm.h  load_linux.c  load_linux.h  notes.md  ucvm.c  utils.c  utils.h  vm.c  vm.h  vminfo.c  vminfo.h  vmm.c  vmm.h  vsyscall.c  vsyscall.h
include/: arguments.h  cpu.h  debugger.h  gdt.h  guest_inspector.h  idt.h  intrusive_dlist.h  load_kvm.h  load_linux.h  mygdbstub.h  utils.h  vfile.h  vfiles.h  view_linux.h  vm.h  vma_manager.h  vminfo.h  vmm.h  vsyscall.h
include/vlinux/: syscall_access.h  syscall_arch_prctl.h  syscall_brk.h  syscall_close.h  syscall_dup.h  syscall_exit.h  syscall_exit_group.h  syscall_fadvise64.h  syscall_fcntl.h  syscall_fstat.h  syscall_getpid.h  syscall_getrandom.h  syscall_mmap.h  syscall_munmap.h  syscall_open.h  syscall_openat.h  syscall_pread64.h  syscall_prlimit64.h  syscall_read.h  syscall_readlinkat.h  syscall_rseq.h  syscall_set_robust_list.h  syscall_set_tid_address.h  syscall_write.h  vlinux_syscall_access.h  vlinux_syscall_arch_prctl.h  vlinux_syscall_brk.h  vlinux_syscall_close.h  vlinux_syscall_exit.h  vlinux_syscall_exit_group.h  vlinux_syscall_fstat.h  vlinux_syscall_getpid.h  vlinux_syscall_mmap.h  vlinux_syscall_munmap.h  vlinux_syscall_open.h  vlinux_syscall_openat.h  vlinux_syscall_pread64.h  vlinux_syscall_read.h  vlinux_syscall_set_tid_address.h  vlinux_syscall_write.h
src/: arguments.c  cpu.c  debugger.c  gdbstub.c  gdt.c  guest_inspetor.c  idt.c  intrusive_dlist.c  load_kvm.c  load_linux.c  ucvm.c  utils.c  vfile.c  vfiles.c  view_linux.c  vm.c  vma_manager.c  vminfo.c  vmm.c  vsyscall.c
src/vlinux/: syscall_access.c  syscall_arch_prctl.c  syscall_brk.c  syscall_close.c  syscall_dup.c  syscall_exit.c  syscall_exit_group.c  syscall_fadvise64.c  syscall_fcntl.c  syscall_fstat.c  syscall_getpid.c  syscall_getrandom.c  syscall_mmap.c  syscall_munmap.c  syscall_open.c  syscall_openat.c  syscall_pread64.c  syscall_prlimit64.c  syscall_read.c  syscall_readlinkat.c  syscall_rseq.c  syscall_set_robust_list.c  syscall_set_tid_address.c  syscall_write.c  vlinux_syscall_access.c  vlinux_syscall_arch_prctl.c  vlinux_syscall_brk.c  vlinux_syscall_close.c  vlinux_syscall_exit.c  vlinux_syscall_exit_group.c  vlinux_syscall_fstat.c  vlinux_syscall_getpid.c  vlinux_syscall_mmap.c  vlinux_syscall_munmap.c  vlinux_syscall_open.c  vlinux_syscall_openat.c  vlinux_syscall_pread64.c  vlinux_syscall_read.c  vlinux_syscall_set_tid_address.c  vlinux_syscall_write.c
tests/: .gitignore  Makefile  benchmark.bash  benchmark.sh  cpu-privileges.c  gvisor.md  hello-glibc.c  hello.c  hello.dockerfile  read_secrets.c  syscall.h  test-cpu.c  test-cpu.dockerfile  test-io.c  test-io.dockerfile  test-syscall.c  test-syscall.dockerfile  test-vdso.c
